Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.
 On branch master
 Your branch is up to date with 'origin/master'.

 Changes to be committed:
	modified:   css/style.css
	new file:   img/aftern.jpg
	new file:   img/akke.jpg
	modified:   img/alt.jpg
	new file:   img/anim.jpg
	new file:   img/basa.jpg
	new file:   img/bus.jpg
	modified:   img/caravan.jpg
	modified:   img/cas.jpg
	new file:   img/chu.jpg
	modified:   img/coffee.jpg
	modified:   img/consol.jpg
	modified:   img/crowd.jpg
	new file:   img/deli.jpg
	modified:   img/dvet.jpg
	modified:   img/emilr.jpg
	modified:   img/eptic.jpg
	modified:   img/freeUr.jpg
	modified:   img/gramma.jpg
	modified:   img/greatVa.jpg
	new file:   img/gym.jpg
	new file:   img/gypo.jpg
	new file:   img/hasta.jpg
	new file:   img/hiho.jpg
	modified:   img/ido.jpg
	new file:   img/joint.jpg
	new file:   img/krub.jpg
	new file:   img/later.jpg
	new file:   img/madde.jpg
	new file:   img/manu.jpg
	new file:   img/mdr.jpg
	modified:   img/microp.jpg
	modified:   img/modernman.jpg
	new file:   img/nanaba.jpg
	new file:   img/nb.jpg
	new file:   img/rave.jpg
	new file:   img/rtdm.jpg
	modified:   img/sadkid-blue.jpg
	new file:   img/sele.jpg
	modified:   img/subm.jpg
	modified:   img/talk.jpg
	modified:   img/tame.jpg
	modified:   img/techno.jpg
	modified:   img/toh.jpg
	new file:   img/vinly.jpg
	new file:   img/walki.jpg
	modified:   img/whiteelephant.jpg
	new file:   img/work.jpg
	modified:   index.html
	modified:   js/timeLine.js
	modified:   sources.html
	new file:   timeLine.html

--- a/index.html
+++ b/index.html
@@ -13,286 +13,7 @@
 </head>
 <body>
 	<main>
-		<section id="block-1prequel">
-			<h1> Az oldal célja</h1>
-			<p>
-				Életem jelentős részét fülessel a fülemben, hangzóróval a hátam mögött töltöm,
-				és tudom hogy sokan hasonlóképp élik az életüket, a zene mindenhova elkísér, a 
-				reggeli tömegközlekedés során, munka és tanulás közben, vagy csak ha kikapcsolódásrra vágyom.
-			</p>
-			<div class="content-img" style="background-image:url(img/microp.jpg)">&nbsp;</div>
-			<p>
-				Nagy szívfájdalmam aznonban hogy az emberek nagyrésze csak bekapcsolja a rádiót,
-				rákeres egy toplistára hogy mi az aktuális trend, és nem fordít arra időt hogy igazán minőségi
-				és valóban jó zenével töltse ki a csendet ami körülveszi. Meglehetősen zavar ennek a következménye is,
-				a kreativitást és mindenféle komolyabb erőfeszítést mellőző produkciók így gond nélkül átmennek a minőségvizsgálaton
-				, és megéri tucatszámra gyártani őket.
-			</p>
-			<p>
-				Nem állítom hogy mindenkinek órákat kellene töltenie azzal hogy keresi az ízlése határait, de ha már
-				nem minden hatodik, hanem minden ötödik ember odafigyel a zenefogyasztási szokásaira, már előrébb kerülhetnek
-				az arra igazán méltó előadók, és talán több egyedi produkciónak éri meg a befekteteett energia.
-			</p>
-			<p>
-				A következőkben felsorolt zenék linkjei egyenesen a spotifyra visznek, de persze a többségük megtalálható
-				a legtöbb streaming szolgáltató zenei kínálatában.
-			</p>
-			<p>
-				A zenéket mindenféle műfajból vállogattam össze, így az elektronikus zene a leg szélsőségesebb előadókig,
-				a könnyebb, mindenki álltal fogyasztható, és a régi naaagy mindenki kedvencei közül válogattam a saját preferenciáim szerint.
-			</p>
-			
-		</section>
-		<section id="block-600">
-			<h1>Első kávé</h1>
-			<div class="content-img" style="background-image:url(img/coffee.jpg)">&nbsp;</div>
-			<p>
-				Én alapvetően az a fajta ember vagyok aki vagy azonnal felkel, vagy 2 óra mulva 
-				riadok fel hogy lekéstem az első 2 órámat.
-			</p>
-			<p>
-
-				Pont ezért nagyon fontos hogy a reggeli rutint bezsíozzam egy kis zenével, 
-				valamivel ami segít kiegyensúlyozottan kezdeni a napomat. 
-			</p>
-			<p>
-
-				A kedvenc számom amit nem tudok meghallgatni elégszer a Great Vacation, 
-				ami mindig semlegesíti bennem a stresszt ami elönti az agyam mikor belegondolok a 
-				napom elkövetkezendő történéseibe. Amikor a nep se jött még fel, az ember nem igazán 
-				áll készen belül, de már a bejárati ajtó fele megy felöltöze, cipőben, táskával, akkor 
-				egy ilyen dal ki tud segíteni, és lehelletnyi erőt ad.
-			</p>
-			<aside>
-				<figure>
-					<a href="https://open.spotify.com/track/4wR2cuDiIkxj5w3yAflqGG?si=caYeaEMDSh-aup1LLLwZMQ">
-						<div class="album-cover" style="background-image:url('img/greatVa.jpg')"></div>
-					</a>
-					<figcaption>
-						Great Vacation
-					</figcaption>
-				</figure>
-				<figure>
-					<a href="https://open.spotify.com/track/7geQWYSQfDNILUUbpRPMCD?si=oXqrJW6tR4KC2_DeuunhHQ">
-						<div class="album-cover" style="background-image:url('img/modernman.jpg')"></div>
-					</a>
-					<figcaption>
-						Modern man intermission
-					</figcaption>
-				</figure>
-				<figure>
-					<a href="https://open.spotify.com/album/3OqRGywivnQ0IeClUeUa4n?si=sBGc88H-SpSEypRNgWzebw">
-						<div class="album-cover" style="background-image:url('img/subm.jpg')"></div>
-					</a>
-					<figcaption>
-						Alex Turner - Submarine
-					</figcaption>
-				</figure>
-				<figure>
-					<a href="https://open.spotify.com/artist/1QAJqy2dA3ihHBFIHRphZj?si=2-iYHYkDQKqFPqYgrYufTg">
-						<div class="album-cover" style="background-image:url('img/cas.jpg')"></div>
-					</a>
-					<figcaption>
-						Cigarette after sex
-					</figcaption>
-				</figure>
-				<figure>
-					<a href="https://open.spotify.com/artist/3ASyBGOeYD6Sk0Vccg8sBW?si=-37N7Vf8SjmqVGIrvQcbhA">
-						<div class="album-cover" style="background-image:url('img/toh.jpg')"></div>
-					</a>
-					<figcaption>
-						Toh Kay
-					</figcaption>
-				</figure>
-				<br class="clear" />
-			</aside>
-		</section>
-		<section id="block-730">
-			<h1>Tömeg[es]közlekedés</h1>
-			<div class="content-img" style="background-image:url(img/crowd.jpg)">&nbsp;</div>
-			<p>
-				Gyűlölöm a tömeget, mikor felszállok a majd üres villamosra, és két megáló alatt
-				minden szabad teret kitölt körülöttem a sok ember. Ilyenkor a legjobb a dubstep/minimal.
-				Az emberek rosszalló nézéssel szokták büntetni ha a massza kellős közepén üvölt a fülembe 
-				Eptic valami elmebeteg száma, mégis ez ad tartást a meglehetősen ingergazdag környezetben.
-			</p>
-			<p>
-				Alternatívaként szóbajöhet még a punk(Double Veterans), vagy ha nem uralkodó érzés a tömegundor,
-				akkor Emil.Rulez! .
-			</p>
-			<aside>
-				<figure>
-					<a href="https://open.spotify.com/artist/2B5fUHo1UvvqbH3nzIUulH?si=RAbzI6AQR-KG3vaNr7mqPA">
-						<div class="album-cover" style="background-image:url('img/dvet.jpg')"></div>
-					</a>
-					<figcaption>
-						Double Veterans
-					</figcaption>
-				</figure>
-				<figure>
-					<a href="https://open.spotify.com/track/5TQxS54o7gw5KOxikHxnUi?si=qMdD794FSkyuyEzthwuCNg">
-						<div class="album-cover" style="background-image:url('img/freeUr.jpg')"></div>
-					</a>
-					<figcaption>
-						Chris Lake
-					</figcaption>
-				</figure>
-				<figure>
-					<a href="https://open.spotify.com/album/0XSd5zsTTSOjnyyQpSGL0l?si=rtextf3-T2qysNAXOroYSA">
-						<div class="album-cover" style="background-image:url('img/eptic.jpg')"></div>
-					</a>
-					<figcaption>
-						Eptic
-					</figcaption>
-				</figure>
-				<figure>
-					<a href="https://open.spotify.com/track/47wPvRG8FEwbZP22UBgTQr?si=ESycpQ6sSgqk03kXd4lAzw">
-						<div class="album-cover" style="background-image:url('img/whiteelephant.jpg')"></div>
-					</a>
-					<figcaption>
-						Seven nation army
-					</figcaption>
-				</figure>
-				<figure>
-					<a href="https://open.spotify.com/artist/2H4MuprgPbOgNGhaHT03pD?si=T2Yks-0VS4WRO2CLTLkBpw">
-						<div class="album-cover" style="background-image:url('img/emilr.jpg')"></div>
-					</a>
-					<figcaption>
-						Emil.Rulez!
-					</figcaption>
-				</figure>
-				<figure>
-					<a href="https://open.spotify.com/track/4GTCwHf5tLna3yW6HJ1DvW?si=W1PsZgyJREyVza002gQIeQ">
-						<div class="album-cover" style="background-image:url('img/consol.jpg')"></div>
-					</a>
-					<figcaption>
-						Salute your solution
-					</figcaption>
-				</figure>
-				<br class="clear" />
-			</aside>
-		</section>
-		<section id="block-1030">
-			<h1>Mindennek is</h1>
-			<p>
-				
-			</p>
-			<aside>
-				<figure>
-					<a href="https://open.spotify.com/playlist/6NLrH4NhRVG6giThtvvxQI?si=Ob6j6vD0SWamJpuM_GJmJw">
-						<div class="album-cover" style="background-image:url('img/techno.jpg')"></div>
-					</a>
-					<figcaption>
-						Minimal/techno
-					</figcaption>
-				</figure>
-				<figure>
-					<a href="https://open.spotify.com/album/79dL7FLiJFOO0EoehUHQBv?si=ZiQOzdZfQ1iobfPkvGEMlA">
-						<div class="album-cover" style="background-image:url('img/tame.jpg')"></div>
-					</a>
-					<figcaption>
-						Currents
-					</figcaption>
-				</figure>
-				<figure>
-					<a href="https://open.spotify.com/album/0AQU2cTRwdbTHkkJLmZZpG?si=WjeDIe_rTxKFPPfWO7VJ4w">
-						<div class="album-cover" style="background-image:url('img/caravan.jpg')"></div>
-					</a>
-					<figcaption>
-						Caravan Palace
-					</figcaption>
-				</figure>
-				<figure>
-					<a href="https://open.spotify.com/track/53qU2K55RJgfs9F50irpB3?si=DdT2nsg-TPu_g3YjjXwyJA">
-						<div class="album-cover" style="background-image:url('img/gramma.jpg')"></div>
-					</a>
-					<figcaption>
-						Muy Tranquilo
-					</figcaption>
-				</figure>
-				<figure>
-					<a href="https://open.spotify.com/track/3PvhJcV5xv7E1ImIfbRYeM?si=3MQ-T1XCSrunPkiTwAFXUQ">
-						<div class="album-cover" style="background-image:url('img/ido.jpg')"></div>
-					</a>
-					<figcaption>
-						I Do Coke
-					</figcaption>
-				</figure>
-				<br class="clear" />
-			</aside>
-		</section>
-		<section id="block-1230">
-			<h1>A második kávé</h1>
-			<p></p>
-			<aside>
-				<figure>
-					<a href="https://open.spotify.com/track/37VL3ff8fU4EI9zq7sOcbd?si=ApQ7tfSnTbeAhiCRKLM-Eg">
-						<div class="album-cover" style="background-image:url('img/talk.jpg')"></div>
-					</a>
-					<figcaption>
-						Takling to the most high
-					</figcaption>
-				</figure>
-				
-				<br class="clear" />
-			</aside>
-		</section>
-		<section id="block-1500">
-			<h1>Hazafelé az út veszélyes</h1>
-			<p></p>
-		</section>
-		<section id="block-1800">
-			<h1>WORKOUT!</h1>
-			<p></p>
-		</section>
-		<section id="block-2000">
-			<h1>"Nem iszunk meg valamit?"</h1>
-			<p></p>
-		</section>
-		<section id="block-end">
-			<h1>Végszó</h1>
-			<p></p>
-		</section>
+		<a href="timeLine.html">timeline</a>
 	</main>
-	<header id="timeLine">
-		<div class="tl-vertical-line"></div>
-		<a class="tl-text" href="#block-1prequel" style="top:10vh" data-color="255,255,255">
-			<div class="tl-time little">Előszó</div>
-			<div class="tl-title little">Az oldal célja</div>
-		</a>
-		<a class="tl-text" href="#block-600" style="top:20vh" data-color="255, 111, 0">
-			<div class="tl-time little">6:00</div>
-			<div class="tl-title little">Első kávé</div>
-		</a>
-		<a class="tl-text" href="#block-730" style="top:30vh" data-color="0, 255, 8">
-			<div class="tl-time little">7:30</div>
-			<div class="tl-title little">Tömeg[es]közlekedés</div>
-		</a>
-		<a class="tl-text" href="#block-1030" style="top:40vh" data-color="43, 0, 255">
-			<div class="tl-time little">10:00</div>
-			<div class="tl-title little">Mindennek is</div>
-		</a>
-		<a class="tl-text" href="#block-1230" style="top:50vh" data-color="255, 8, 0">
-			<div class="tl-time little">12:30</div>
-			<div class="tl-title little">A második kávé</div>
-		</a>
-		<a class="tl-text" href="#block-1500" style="top:60vh" data-color="143, 33, 139">
-			<div class="tl-time little">15:00</div>
-			<div class="tl-title little">Hazafelé az út veszélyes</div>
-		</a>
-		<a class="tl-text" href="#block-1800" style="top:70vh" data-color="164, 171, 164">
-			<div class="tl-time little">18:00</div>
-			<div class="tl-title little">WORKOUT!</div>
-		</a>
-		<a class="tl-text" href="#block-2000" style="top:80vh" data-color="0,0,0">
-			<div class="tl-time little">20:00</div>
-			<div class="tl-title little">"Nem iszunk meg valamit?"</div>
-		</a>
-		<a class="tl-text" href="#block-end" style="top:90vh" data-color="0,0,0">
-			<div class="tl-time little">Végszó</div>
-			<div class="tl-title little"></div>
-		</a>
-	</header>
-	<script src="js/timeLine.js"></script>
 </body>
 </html>
